diesel_compile_tests/tests/ui/queryable_by_name_requires_table_name_or_sql_type_annotation.rs
extern crate diesel;
use diesel::deserialize::QueryableByName;

#[derive(QueryableByName)]
struct Foo {
    foo: i32,
    bar: String,
}

#[derive(QueryableByName)]
struct Bar(i32, String);

fn main() {}
